Edits many lines of html.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,24 @@
       <p> I'm Philip Kariuki</p>
       <img src="images/portfolio.jpg" alt="me">
     </div>
+    <p>I am graduate from <em>Kenyatta University.</em> The <span class="cat-aboutme">main reason</span> I took on programming is because I always thought it is a <strong>cool profession</strong>. Watching many movies has obviously influenced my thinking, since according to Hollywood, anything electronic can be hacked. Morever I think with time programming will come in handy career-wise.</p>
     <div class="column">
+    <br><br><br><br><br>
       <p>Below is a list of projects I've uploaded on github since joining Moringa School</p>
+      <ol>
+        <li><a href="https://github.com/philipkariuki/hello-world">Hello, world!</a></li>
+        <li><a href="https://github.com/philipkariuki/my-first-website">My first website.</a></li>
+        <li><a href="https://github.com/philipkariuki/my-fav-pet">My favourite pet.!</a></li>
+      </ol>
     </div>
-    <div class="column">
-      <p>My background</p>
+    <div class="sidebar">
+      <p>My hobbies include:</p>
+      <ul>
+        <li>Watching movies</li>
+        <li>Reading online journals</li>
+        <li>Gaming</li>
+      </ul>
     </div>
-  </body>
+
+    </body>
 </html>
