Redone index.html without styling

--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-    <title>My Portfolio</title>
-  </head>
-  <body>
-    <div class="h1">
-      <h1>About Me</h1>
-    </div>
+<html lang="en">
 
-    <div class="column2">
-      <p> I'm Philip Kariuki</p>
-      <img src="images/portfolio.jpg" alt="me">
-    </div>
-    <p>I am graduate from <em>Kenyatta University.</em> The <span class="cat-aboutme">main reason</span> I took on programming is because I always thought it is a <strong>cool profession</strong>. Watching many movies has obviously influenced my thinking, since according to Hollywood, anything electronic can be hacked. Morever I think with time programming will come in handy career-wise.</p>
-    <div class="column">
-    <br><br><br><br><br>
-      <p>Below is a list of projects I've uploaded on github since joining Moringa School</p>
-      <ol>
-        <li><a href="https://github.com/philipkariuki/hello-world">Hello, world!</a></li>
-        <li><a href="https://github.com/philipkariuki/my-first-website">My first website.</a></li>
-        <li><a href="https://github.com/philipkariuki/my-fav-pet">My favourite pet.!</a></li>
-      </ol>
-    </div>
-    <div class="sidebar">
-      <p>My hobbies include:</p>
+<head>
+  <title>My Portfolio</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
+<body>
+
+  <h2>About Me</h2>
+
+  <p>Portfolio:</p>
+      <ul>
+        <li><a href="https://github.com/philipkariuki/hello-world">Hello World</a></li>
+        <li><a href="https://philipkariuki.github.io/my-first-website/">My First Website</a></li>
+        <li><a href="https://philipkariuki.github.io/my-fav-pet/">My favourite pet</a></li>
+      </ul>
+
+  <h1>Hey!</h1>
+  <p>I'm Philip Kariuki.</p>
+  <p>I am graduate from <em>Kenyatta University.</em> The <span class="cat-aboutme">main reason</span> I took on programming is because I always thought it is a <strong>cool profession</strong>. Watching many movies has obviously influenced my
+        thinking, since according to Hollywood, anything electronic can be hacked. Morever I think with time programming will come in handy career-wise.</p>
+  <p>My hobbies include:</p>
       <ul>
         <li>Watching movies</li>
         <li>Reading online journals</li>
         <li>Gaming</li>
       </ul>
-    </div>
 
-    </body>
+  <img src="images/portfolio.jpg" alt="Phil">
+
+  <p>© Phil</p>
+
+
+</body>
+
 </html>
