Adds header div

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-
-  <h2>About Me</h2>
+  <div class="header">
+    <h2>About Me</h2>
+  </div>
 
   <p>Portfolio:</p>
       <ul>
