Adds div for columns

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <h2>About Me</h2>
   </div>
 
-  <p>Portfolio:</p>
+  <div class="nav">
+    <p>Portfolio:</p>
       <ul>
         <li><a href="https://github.com/philipkariuki/hello-world">Hello World</a></li>
         <li><a href="https://philipkariuki.github.io/my-first-website/">My First Website</a></li>
         <li><a href="https://philipkariuki.github.io/my-fav-pet/">My favourite pet</a></li>
       </ul>
+    </div>
 
   <h1>Hey!</h1>
   <p>I'm Philip Kariuki.</p>
