Adds style for section div

--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
       </ul>
     </div>
 
-  <h1>Hey!</h1>
-  <p>I'm Philip Kariuki.</p>
-  <p>I am graduate from <em>Kenyatta University.</em> The <span class="cat-aboutme">main reason</span> I took on programming is because I always thought it is a <strong>cool profession</strong>. Watching many movies has obviously influenced my
+  <div class="article">
+    <h1>Hey!</h1>
+    <p>I'm Philip Kariuki.</p>
+    <p>I am graduate from <em>Kenyatta University.</em> The <span class="cat-aboutme">main reason</span> I took on programming is because I always thought it is a <strong>cool profession</strong>. Watching many movies has obviously influenced my
         thinking, since according to Hollywood, anything electronic can be hacked. Morever I think with time programming will come in handy career-wise.</p>
-  <p>My hobbies include:</p>
+    <p>My hobbies include:</p>
       <ul>
         <li>Watching movies</li>
         <li>Reading online journals</li>
         <li>Gaming</li>
       </ul>
+  </div>
 
   <img src="images/portfolio.jpg" alt="Phil">
 
