Adds div for image section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <li>Gaming</li>
       </ul>
   </div>
-
-  <img src="images/portfolio.jpg" alt="Phil">
+  <div class="nav2">
+    <img src="images/portfolio.jpg" alt="Phil">
+  </div>
 
   <p>© Phil</p>
 
