Adds div section for footer

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <img src="images/portfolio.jpg" alt="Phil">
   </div>
 
-  <p>© Phil</p>
-
+  <div class="footer">
+    <p>© Phil</p>
+  </div>
 
 </body>
 
